# promis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml
conda/: meta.yaml
config/: config.example.yaml  config.golden.yaml  config.test.yaml
envs/: promis_test_env.yaml
promis/: __init__.py  cli.py  validation.py
promis/workflow/: Snakefile  __init__.py  config.yaml
promis/workflow/scripts/: analyze_MSI_distribution.py  analyze_MSI_lengths.py  extract_MSI_sequences.py  plot_MSI_results.py  plot_region_stats.py  repeat_type_stats.py
promis/workflow/scripts/preprocess/: find_MS_sites.py
tests/: README.md  create_tiny_bam.py  test_cli.py  test_extract_msi_sequences.py  test_golden_workflow.py  test_tiny_bam_fixture.py  test_validation.py  test_workflow_paths.py
tests/data/: tiny.bam  tiny.bam.bai  tiny_loci.csv  toy_msi.bam  toy_msi.bam.bai  toy_mss.bam  toy_mss.bam.bai
