[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promis"
version = "0.1.1"
description = "Snakemake pipeline for microsatellite instability analysis"
readme = "README.md"
authors = [{ name = "PROMIS developers" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "pysam>=0.21",
    "pyyaml>=5.4",
    "rich>=13.0",
    "tqdm>=4.64",
    "numba>=0.57",
    "snakemake-minimal==9.9.0",
]

[project.urls]
Homepage = "https://github.com/vlachosg37/promis"
Repository = "https://github.com/vlachosg37/promis"

[project.scripts]
promis = "promis.cli:main"
promis-find-ms-sites = "promis.workflow.scripts.preprocess.find_MS_sites:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["promis", "promis.*"]

[tool.setuptools.package-data]
"promis.workflow" = [
    "Snakefile",
    "config.yaml",
    "environment.yml",
    "database/*.csv",
    "database/*.txt",
    "scripts/*.py",
    "scripts/preprocess/*.py",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
